--- a/apps/ng-cropper-playground/src/app/NgCropperPlaygroundApp.html
+++ b/apps/ng-cropper-playground/src/app/NgCropperPlaygroundApp.html
@@ -1,4 +1,6 @@
-<h1>{{ title }}</h1>
-<ngCropper />
-<app-nx-welcome></app-nx-welcome>
-<router-outlet></router-outlet>
+<div class="container mx-auto p-4">
+    <h1 class="text-3xl font-bold text-blue-600 mb-4">NgCropper Playground</h1>
+    <div class="bg-gray-100 p-6 rounded-lg shadow-md">
+        <ngCropper />
+    </div>
+</div>
