feat: add style customization options to NgCropper component and update HTML structure

--- a/libs/ng-cropper/src/lib/NgCropper/NgCropper.scss
+++ b/libs/ng-cropper/src/lib/NgCropper/NgCropper.scss
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:host {
+    @apply block h-dvh;
+}
+
+::ng-deep {
+    .sb-main-padded {
+        @apply p-0 !important;
+    }
+}
+
+.ng-cropper-container {
+    @apply flex items-center justify-center w-full h-full;
+
+    .cropper-canvas {
+        @apply relative w-full h-full;
+    }
+
+}
